--- a/src/Dynamocs.TestTools/Dynamocs.TestTools.csproj
+++ b/src/Dynamocs.TestTools/Dynamocs.TestTools.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.28" />
-    <PackageReference Include="Moq" Version="4.15.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
