--- a/src/Dynamocs.TestTools/Dynamocs.TestTools.csproj
+++ b/src/Dynamocs.TestTools/Dynamocs.TestTools.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
+	  <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
