--- a/tests/Dynamocs.DevTools.Tests/Dynamocs.DevTools.Tests.csproj
+++ b/tests/Dynamocs.DevTools.Tests/Dynamocs.DevTools.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
+	  <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
