--- a/src/Dynamocs.DevTools/Dynamocs.DevTools.csproj
+++ b/src/Dynamocs.DevTools/Dynamocs.DevTools.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.28" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
