--- a/src/Dynamocs.DevTools/Dynamocs.DevTools.csproj
+++ b/src/Dynamocs.DevTools/Dynamocs.DevTools.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
@@ -7,7 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.28" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
