--- a/src/Dynamocs.DevTools/Abel.Dynamics.PluginTools.csproj
+++ b/src/Dynamocs.DevTools/Abel.Dynamics.PluginTools.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.28" />
+    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.32" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
