--- a/tests/Abel.Dynamics.PluginTools.Tests/Abel.Dynamics.PluginTools.Tests.csproj
+++ b/tests/Abel.Dynamics.PluginTools.Tests/Abel.Dynamics.PluginTools.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.32" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
